Camera capture implementation (#6)
* init implementation of camera capture

* stop camera before configure

* add debug output

* add a button for test capture (not yet working)

* update openapi capture interface to return stream

* wip, still not working yet

* Update README.md

* Update README.md (#4)

Add troubleshoot instructions

* add camera lock (#5)

* change capture_file to capture_array

* rewind stream upon save

* update to promise handler so that result returned to renderer properly

* add some decoding code, wip

* add some logs and remove npy header

---------
