# rpi/server/openapi_server/models/__init__.py
@@ -1,7 +1,6 @@
 # flake8: noqa
 # import models into model package
 from openapi_server.models.camera_autofocus_post_request import CameraAutofocusPostRequest
-from openapi_server.models.camera_capture_post200_response import CameraCapturePost200Response
 from openapi_server.models.camera_exposure_post_request import CameraExposurePostRequest
 from openapi_server.models.camera_manual_focus_post_request import CameraManualFocusPostRequest
 from openapi_server.models.lights_blue_max_time_post_request import LightsBlueMaxTimePostRequest
